<resources>
    <string name="app_name">lepaikt</string>
    <string name="login">登陆</string>
    <!--<string name="name">餐时间</string>-->
    <string name="user_login">伙伴登陆</string>
    <string name="table_manage">桌台管理</string>
    <string name="order_dishes">点餐(%s)</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <!--<string name="user_login_tips">请输入员工号和密码登陆</string>-->


    <string name="filter">筛选桌台</string>
    <string name="region">餐区选择</string>
    <string name="refresh">刷新全部</string>
    <string name="refresh_not_paid">未付款</string>
    <string name="refresh_black">空台</string>
    <string name="msg">消息</string>
    <string name="menu">菜单</string>
    <string name="close">关闭</string>
    <string name="ok">确定</string>
    <string name="cancel">消息</string>
    <string name="dish_detail">菜品详情</string>
    <string name="waiter_method_tips">请选择您期望的口味/做法</string>
    <string name="waiter_weigh_tips">请输入实际重量</string>
    <string name="waiter_weigh_tips1">实际重量:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_order_dishes">OrderDishesActivity</string>

    <string name="forget_password">忘记密码</string>
    <string name="user_login_tips">用户登录</string>
    <string name="phone_area_tips">+86</string>
    <string name="phone_input_tips">请输入手机号码</string>
    <string name="input_pass_word_tips">请输入密码</string>
    <string name="forget_pass_word_tips">忘记密码?</string>
    <string name="login_tips">登录</string>
    <string name="no_account_tips">没有账号?</string>
    <string name="register_now">立即注册</string>
    <string name="another_login_method">您还可以选择以下方式登录</string>
    <string name="user_register_tips">用户注册</string>
    <string name="input_verification_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="read_user_agreement">我已认真阅读并同意</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="registered_account">注册</string>
    <string name="home_page_tips">乐拍</string>
    <string name="the_classification">分类</string>
    <string name="product_detail">商品详情</string>
    <string name="want_bid">我要出价</string>
    <string name="common_confirm">确定</string>
    <string name="personal_center">个人中心</string>
    <string name="today_earnings">今日收益</string>
    <string name="total_earnings">总收益</string>
    <string name="the_beans">拍豆</string>
    <string name="the_balance">余额</string>
    <string name="the_margin">保证金</string>
    <string name="is_auction">正在拍</string>
    <string name="is_out">已出局</string>
    <string name="for_the_payment">待付款</string>
    <string name="for_the_goods">待收货</string>
    <string name="has_been_completed">已完成</string>
    <string name="my_recommend">我的推荐</string>
    <string name="my_qr_code">我的二维码</string>
    <string name="my_address">我的地址</string>
    <string name="confirm_bid">确认出价</string>
    <string name="the_time">时间</string>
    <string name="the_type">类型</string>
    <string name="the_recharge">充值</string>
    <string name="withdrawal">提现</string>
    <string name="freeze">冻结</string>
    <string name="can_use">可用</string>
    <string name="order_num">订单编号</string>
    <string name="payment">付款</string>
    <string name="temp_lead">暂时领先</string>
    <string name="continue_auction">继续拍</string>
    <string name="order_detail">订单详情</string>
    <string name="confirm_receive">确认收货</string>
    <string name="receive_info">收货信息</string>
    <string name="product_info">商品信息</string>
    <string name="deduction_method">抵扣方式</string>
    <string name="go_pay">支付</string>
    <string name="order_tips">订单</string>
    <string name="recharge">充值</string>
    <string name="recharge_method">充值方式</string>
    <string name="recharge_amount">充值金额</string>
    <string name="confirm_recharge">确认充值</string>
    <string name="withdrawal_tips">提现至</string>
    <string name="withdrawal_type">提现类型</string>
    <string name="confirm_withdrawal_tips">3小时到账,确认提现</string>
    <string name="pay_success_tips">请耐心等待系统为您发货\n发货后我们将以短信的方式提醒您</string>
    <string name="pay_success">支付成功</string>
    <string name="check_order">查看订单</string>
    <string name="back_to_home_page">返回首页</string>
    <string name="receiver_address">收货地址</string>
    <string name="add_receiver_address">手动添加</string>
    <string name="the_default_address">已设为默认</string>
    <string name="set_default_address">设为默认</string>
    <string name="delete_address">删除</string>
    <string name="edit_address">编辑</string>
    <string name="use_address">使用</string>
    <string name="add_address">新增收货地址</string>
    <string name="confirm_add_address">确认新增</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="area">地区</string>
    <string name="address">地址</string>
    <string name="postcode">邮编</string>
    <string name="share">分享</string>
    <string name="have_no_more">没有更多了~</string>
    <string name="the_current_price">当前价</string>
    <string name="rmb">RMB</string>
    <string name="the_ongoing">正在进行</string>
    <string name="the_end_of">结束</string>
    <string name="leatien_auction">蔻田拍卖</string>
    <string name="items_to_show">拍品展示\nEXHIBITION</string>
    <string name="bidding_rules">竞拍规则\nREGULATION</string>
</resources>
