<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".business.activity.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/user_login"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        />

    <EditText
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:maxLength="5"
        android:inputType="number"
        android:id="@+id/txtAccount"
        android:layout_width="match_parent"
        android:layout_height="55dp" />
    <EditText
        android:layout_margin="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:id="@+id/txtPasswd"
        android:layout_width="match_parent"
        android:layout_height="55dp" />

    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="55dp" />



</LinearLayout>