<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".business.activity.RegisterActivity">
    <EditText
        android:id="@+id/userPhone"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:textColorHint="@color/c666666"
        android:textColor="@color/c030303"
        android:textSize="16sp"
        android:hint="@string/phone_input_tips"
        android:background="@drawable/shape_input_bg_line"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="297dp"
        android:layout_height="43dp" />
    <ImageView
        android:scaleType="center"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/userPhone"
        app:layout_constraintBottom_toBottomOf="@+id/userPhone"
        app:layout_constraintRight_toRightOf="@+id/userPhone"
        app:layout_constraintTop_toTopOf="@+id/userPhone"
        android:src="@drawable/ico_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/verificationCode"
        android:hint="@string/input_verification_code"
        android:background="@drawable/shape_input_bg_line"
        android:layout_marginTop="16dp"
        android:paddingLeft="15dp"
        android:textColorHint="@color/c666666"
        android:textColor="@color/c030303"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/userPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="297dp"
        android:layout_height="43dp" />
    <Button
        app:layout_constraintTop_toBottomOf="@+id/verificationCode"
        app:layout_constraintBottom_toBottomOf="@+id/verificationCode"
        app:layout_constraintTop_toTopOf="@+id/verificationCode"
        android:layout_marginRight="5dp"
        android:textSize="14sp"
        android:textColor="@color/ffffff"
        app:layout_constraintRight_toRightOf="@+id/verificationCode"
        android:text="@string/get_verification_code"
        android:background="@drawable/shape_verification_code_btn_bg"
        android:layout_width="wrap_content"
        android:layout_height="36dp" />
    <EditText
        android:id="@+id/password"
        android:hint="@string/input_pass_word_tips"
        android:background="@drawable/shape_input_bg_line"
        android:layout_marginTop="16dp"
        android:paddingLeft="15dp"
        android:textColorHint="@color/c666666"
        android:textColor="@color/c030303"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/verificationCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="297dp"
        android:layout_height="43dp" />
    <CheckBox
        android:id="@+id/cxbReadDeal"
        android:layout_marginTop="15dp"
        app:layout_constraintLeft_toLeftOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_width="20dp"
        android:layout_height="20dp" />
    <TextView
        android:id="@+id/confirmRead"
        android:layout_marginLeft="5dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/cxbReadDeal"
        android:includeFontPadding="false"
        app:layout_constraintBottom_toBottomOf="@id/cxbReadDeal"
        app:layout_constraintTop_toTopOf="@+id/cxbReadDeal"
        app:layout_constraintLeft_toRightOf="@+id/cxbReadDeal"
        android:text="@string/read_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textColor="@color/c2196F3"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/confirmRead"
        app:layout_constraintTop_toBottomOf="@id/confirmRead"
        app:layout_constraintTop_toTopOf="@id/confirmRead"
        app:layout_constraintLeft_toRightOf="@+id/confirmRead"
        android:includeFontPadding="false"
        android:text="@string/user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmRead"
        android:layout_marginTop="43dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/ffffff"
        android:textSize="15sp"
        android:background="@drawable/shape_login_btn_bg"
        android:text="@string/registered_account"
        android:layout_width="293dp"
        android:layout_height="43dp" />
</android.support.constraint.ConstraintLayout>